--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,236 @@
 /* Ini css */
+nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: lightpink;
+}
+ 
+/* css section */
+nav>section {
+    display: flex;
+    align-items: center;
+}
+
+body {
+    background-color: lightpink;
+    margin: 0;
+}
+
+/* css logo */
+.logo-icon {
+    height: 50px;
+    width: 50px;
+    border: 1px solid white;
+    border-radius: 50%;
+    background-image: url(../Asset/idol.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+
+
+/* css nav item */
+.nav-item > div  {
+    border: solid 1px pink;
+    padding: 5px;
+    border-radius: 8px;
+    background-image: .../;
+}
+
+
+
+
+.idol-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.muse {
+    width: 80px; 
+    height: 80px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-image: url(../Asset/Muse.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.aquors {
+    width: 80px; 
+    height: 80px;
+    background-image: url(../Asset/Aquors.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.nijigasaki {
+    width: 80px; 
+    height: 80px;
+    background-image: url(../Asset/nijigasaki1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.liella {
+    width: 80px; 
+    height: 80px;
+    background-image: url(../Asset/liella.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+h5 {
+    text-align: center;
+}
+
+.form-result {
+    height: 100px;
+    border: 1px solid black;
+}
+
+.message-us-section {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form-group > div {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+}
+
+
+
+input[type="text"],
+input[type="date"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.radio-group label {
+    display: inline-block;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+
+
+button:hover {
+    background-color: #0056b3;
+}
+
+
+
+form {
+    padding-left: 5px;
+}
+
+.nama {
+    float: left;
+    width: 100px;
+}
+
+.tgl-lahir {
+    float: left;
+    width: 100px;
+}
+
+.jenis-kelamin {
+    float: left;
+    width: 100px;
+}
+
+.pesan {
+    float: left;
+    width: 100px;
+}
+
+.our-idol {
+    background-color: antiquewhite;
+}
+.result-container {
+    width: 60%;
+}
+
+/* ini Banner slide */
+.banner-container{
+    border: 1px solid none;
+    height: 500px;
+}
+
+.banner-img {
+    display: none;
+    height: 258px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.message-kita {
+   
+    height: 78px;
+}
+
+.message-us {
+    display: flex;
+    justify-content: center;
+    background-image: url(../Asset/logo.png);
+    height: 78px;
+      
+}
+
+
+img {
+    width: 100%;
+    height: 500px;
+    max-width: 100%;
+  
+}
+
+.button-banner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-send {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        background-color: #ccc;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+footer {
+    color: black;
+    text-align: end;
+    font-size: 12px;
+    background-color: antiquewhite;
+    
+}
+
+.sub-tittle {
+    background-color: antiquewhite;
+}
+
